testsuite/tests/typecheck/should_fail/tcfail123.stderr

tcfail123.hs:11:9: error:
    Couldn't match kind ‘*’ with ‘#’
    When matching types
      r0 :: *
      Int# :: #
    In the first argument of ‘f’, namely ‘3#’
    In the expression: f 3#
    In an equation for ‘h’: h v = f 3#
